--- a/trunk/config/project.yml
+++ b/trunk/config/project.yml
@@ -3,6 +3,6 @@ all:
     folder: 
     provider: 
     pattern: '%n - [%sx%k] - %t'
-    language: en_EN
+    language:
   replaceSpaces: false
   openRecursively: false
